<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ch.epfl.sweng.udle.activities.MenuOptionsDrinks.MenuFragment"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/MenuActivity_KebabLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45">


        <ImageView
            android:id="@+id/MenuActivity_KebabImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/kebab"
            android:layout_weight="80"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="20"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/MenuActivity_KebabTotalMoney"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:editable="false"
                android:gravity="center_vertical"
                android:layout_marginRight="100dp" />

            <Button
                android:id="@+id/MenuActivity_KebabMinus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="-"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"

                android:background="@drawable/button_shape2"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"/>

            <TextView
                android:id="@+id/MenuActivity_KebabNbr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="number"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <Button
                android:id="@+id/MenuActivity_KebabPlus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="+"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"

                android:background="@drawable/button_shape2"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"/>

        </LinearLayout>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/MenuActivity_BurgerLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="45">

        <ImageView
            android:id="@+id/MenuActivity_BurgerImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:src="@drawable/burger"
            android:layout_weight="80"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="20"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/MenuActivity_BurgerTotalMoney"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:editable="false"
                android:gravity="center_vertical"
                android:layout_marginRight="100dp" />

            <Button
                android:id="@+id/MenuActivity_BurgerMinus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="-"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"

                android:background="@drawable/button_shape2"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"/>

            <TextView
                android:id="@+id/MenuActivity_BurgerNbr"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical|center_horizontal"
                android:inputType="number"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp" />

            <Button
                android:id="@+id/MenuActivity_BurgerPlus"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="+"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="20sp"

                android:background="@drawable/button_shape2"
                android:shadowColor="#A8A8A8"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"/>

        </LinearLayout>

    </LinearLayout>



    <Button
        android:id="@+id/MenuActivity_NextButton"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/Next"
        android:layout_weight="10"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"

        android:background="@drawable/button_shape2"
        android:shadowColor="#A8A8A8"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"

        android:layout_margin="@dimen/_3sdp"
        />



</LinearLayout>
