...
        >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90"
        android:id="@+id/Options_noMenuSelected"
        android:text="@string/noMenuNoOptions"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
...
